# uberserver-rs

./: .gitignore  Cargo.toml
migrations/2022-06-18-130434_users/: up.sql
src/: channel.rs  chatserver.rs  client.rs  main.rs  natserver.rs  protocol.rs  sayhooks.rs  schema.rs  sqlusers.rs
